<resources>
    <string name="app_name">Medi</string>
    <string name="spinner_Patient">Osoba</string>
    <string name="add_disease">Dodaj chorobę</string>
    <string name="add">Dodaj</string>
    <string name="scan">Skanuj</string>
    <string name="dictionary">Słownik</string>
    <string name="name">Nazwa</string>
    <string name="start_date">Data rozpoczęcia</string>
    <string name="description">Opis</string>
    <string name="save">Zapisz</string>
    <string name="find_medicament_in_kit">szukaj leku w swojej apteczce</string>
    <string name="assign_medicament_to_disease">Przypisz leki do choroby</string>
    <string name="currency">zł</string>
    <string name="date_of_finish_disease">Data zakończenia choroby</string>
    <string name="unfinish">niezakończona</string>
    <string name="DateStopLessThanDateStart">Data zakończenia nie może być wcześniejsza niż rozpoczęcia</string>
    <string name="Ended">Zakończenie: %1$s</string>
    <string name="MedicamentsCount">Leki (%1$d)</string>
    <string name="DiseasesCount">Choroby (%1$d)</string>
    <string name="FilesCount">Pliki (%1$d)</string>
    <string name="DosagesCount">Dawki (%1$d)</string>
    <string name="disease_details">Szczegóły choroby</string>
    <string name="Name">Nazwa:</string>
    <string name="Start">Rozpoczęcie:</string>
    <string name="Finish">Zakończenie:</string>
    <string name="Description">Opis:</string>
    <string name="Medicaments">Leki</string>
    <string name="Files">Pliki</string>
    <string name="Dosages">Dawki</string>
    <string name="DoFinish">Zakończ</string>
    <string name="search_medicament_in_list">szukaj leku na liście</string>
    <string name="diseaseInDosages">%1$s (rozp. %2$s)</string>
    <string name="medicamentInDosages">%1$s - %2$s %3$s (ważn. %4$s)</string>
    <string name="picture_description">Opis zdjęcia</string>
    <string name="Save">Zapisz</string>
    <string name="medicamentSearchInfo">%1$s (znaleziono %2$d szt.)</string>
    <string name="producent">Producent: %1$s</string>
    <string name="pack">Opakowanie: %1$s</string>
    <string name="kind">Rodzaj: %1$s</string>
    <string name="price">Cena: %1$s</string>
    <string name="sendMedicamentSuccess">Lek %1$s wysłano na serwer</string>
    <string name="sendMedicamentFail">Błąd wysyłania leku %1$s na serwer</string>
    <string name="min_3_signs">Wpisz minimum 3 znaki</string>
    <string name="input_medicament">Wpisz nazwę leku</string>
    <string name="Date_parametr">Data: %1$s</string>
    <string name="birthday">ur. : %1$s</string>
    <string name="Confirm_use">Potwierdź zużycie</string>
    <string name="operation_is_irreversible">operacja jest nieodwracalna</string>
    <string name="Yes">Tak</string>
    <string name="Cancel">Anuluj</string>
    <string name="No_diseases">Brak chorób</string>
    <string name="Medicament_name">Nazwa leku</string>
    <string name="active_substance">Aktywna substancja</string>
    <string name="form">Postać</string>
    <string name="Dosage">Dawka</string>
    <string name="Pack">Opakowanie</string>
    <string name="Producent">Producent</string>
    <string name="Prescription">Recepta</string>
    <string name="Type">Typ</string>
    <string name="Risk">Ryzyko stosowania</string>
    <string name="Driving_info">Sprawność spychomotoryczna</string>
    <string name="Lactation_info">Okres laktacji</string>
    <string name="Trimestr_1_info">I trymest ciąży</string>
    <string name="Trimestr_2_info">II trymest ciąży</string>
    <string name="Trimestr_3_info">III trymest ciąży</string>
    <string name="Alkohol_info">Alkohol</string>
    <string name="Composition">Skład</string>
    <string name="Effects">Działanie</string>
    <string name="Indications">Wskazania</string>
    <string name="Contraindications">Przeciwwskazania</string>
    <string name="Precaution">Środki ostrożności</string>
    <string name="Pregnancy">Ciąża i karmienie piersią</string>
    <string name="Sideeffects">Działanie niepożądane</string>
    <string name="Interactions">Interakcje</string>
    <string name="DosageInfo">Dawkowanie</string>
    <string name="Remark">Uwagi</string>
    <string name="January">Styczeń</string>
    <string name="February">Luty</string>
    <string name="March">Marzec</string>
    <string name="April">Kwiecień</string>
    <string name="May">Maj</string>
    <string name="June">Czerwiec</string>
    <string name="July">Lipiec</string>
    <string name="August">Sierpień</string>
    <string name="September">Wrzesień</string>
    <string name="October">Październik</string>
    <string name="November">Listopad</string>
    <string name="December">Grudzień</string>
    <string name="Diseases_duration">Choroby trwające: %1$d</string>
    <string name="Diseases_ended">Choroby zakończone: %1$d</string>
    <string name="Name_min_4_signs">Imię musi mieć min 4 znaki</string>
    <string name="Put_birthday">Podaj datę urodzin</string>
    <string name="Put_photo">Dodaj zdjęcie</string>
    <string name="text_view_count_active_medicament">W apteczce\n%1$d</string>
    <string name="text_view_count_archive_medicament">Zużyte\n%1$d</string>
    <string name="text_view_count_overdue_medicament">Po terminie\n%1$d</string>
    <string name="Patients">Osoby</string>
    <string name="Email">Email</string>
    <string name="Password">Hasło</string>
    <string name="Login">Zaloguj</string>
    <string name="Register">Zarejestruj</string>
    <string name="Click_once_again_to_exit">Proszę kilknąć cofnij jeszcze raz aby zamknąć program</string>
    <string name="emoji_factory">&#127981;</string>🏭🏭
    <string name="emoji_package">&#128230;</string>🏭🏭
    <string name="emoji_pill">&#128138;</string>🏭🏭


</resources>
