<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="local.tomo.medi.disease.DiseaseDetailsActivity"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_margin="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/disease_details"
            android:id="@+id/textView7"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Name"
            android:textColor="#000000"
            android:id="@+id/textViewName"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Start"
            android:textColor="#000000"
            android:id="@+id/textViewStart"
            android:layout_below="@+id/textViewName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Finish"
            android:textColor="#000000"
            android:id="@+id/textViewFinish"
            android:layout_below="@+id/textViewStart"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Description"
            android:textColor="#000000"
            android:id="@+id/textView11"
            android:layout_below="@+id/textViewFinish"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_below="@+id/textView11"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:id="@+id/textViewDescription" />
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_pills"
            android:background="@drawable/menu_background_drugs_add"
            android:textColor="#FFFFFF"
            android:id="@+id/buttonMedicaments"
            android:paddingTop="30dp"
            android:drawablePadding="0dp"
            android:text="@string/Medicaments"
            android:textSize="20dp"
            android:layout_margin="2dp"></Button>

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/all_files"
            android:background="@drawable/menu_background_drugs_add"
            android:textColor="#FFFFFF"
            android:id="@+id/buttonFiles"
            android:paddingTop="30dp"
            android:drawablePadding="0dp"
            android:text="@string/Files"
            android:textSize="20dp"
            android:layout_margin="2dp"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/dosages"
            android:background="@drawable/menu_background_drugs_add"
            android:textColor="#FFFFFF"
            android:id="@+id/buttonDosages"
            android:paddingTop="30dp"
            android:drawablePadding="0dp"
            android:text="@string/Dosages"
            android:textSize="20dp"
            android:layout_margin="2dp"></Button>

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/finish"
            android:background="@drawable/menu_background_drugs_add"
            android:textColor="#FFFFFF"
            android:id="@+id/buttonFinish"
            android:paddingTop="30dp"
            android:drawablePadding="0dp"
            android:text="@string/DoFinish"
            android:textSize="18dp"
            android:layout_margin="2dp"></Button>

    </LinearLayout>
</LinearLayout>
