<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp">
        </TextView>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewName"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emoji_factory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/emoji_factory"
                android:textSize="16sp"
                android:layout_marginEnd="5dp">
            </TextView>

            <TextView
                android:id="@+id/textViewProducer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/emoji_factory"
                android:layout_marginStart="3dp"
                android:textSize="16sp">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emoji_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/emoji_package"
                android:textSize="16sp"
                android:layout_marginEnd="5dp">
            </TextView>

            <TextView
                android:id="@+id/textViewPackage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/emoji_package"
                android:textSize="16sp">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout2"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emoji_pill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/emoji_pill"
                android:textSize="16sp"
                android:layout_marginEnd="5dp">
            </TextView>

            <TextView
                android:id="@+id/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/emoji_pill"
                android:textSize="16sp">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout3"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emoji_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/emoji_clock"
                android:textSize="16sp"
                android:layout_marginEnd="5dp">
            </TextView>

            <TextView
                android:id="@+id/textViewExpirationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/emoji_clock"
                android:textSize="16sp"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/archiveButton"
            android:layout_alignBottom="@id/relativeLayout4"
            android:layout_alignEnd="@id/relativeLayout3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_trash" />

    </RelativeLayout>
</LinearLayout>
